# BansheeSBGen

./: .gitignore  .travis.yml  CMakeLists.txt  ScriptBindingParser.sln  appveyor.yml  readme.md
Assets/: anotherExample.cpp  example.cpp  toParse.cpp
CMake/Modules/: FindClang.cmake
ScriptBindingParser/: ScriptBindingParser.filters  ScriptBindingParser.vcxproj  example.cpp  main.cpp
Source/: common.h  generator.cpp  main.cpp  parser.cpp  parser.h
